Update DrawingRegisterController Update ProjectState Controller

--- a/DrawingRegisterWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DrawingRegisterWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -34,15 +34,11 @@
         <section class="text-center">
             <h2>There is no Forced Registration!</h2>
             <hr />
-            <h6 class="text-secondary"><strong>You can use a spectator mode user for a quick glimpse of the website!</strong></h6>
-            <div class="container text-center mt-4 mb-4">
-                <img style="height:4em; width:4em" src="~/Assets/incognito.png" />
-                <button class="btn-lg btn-dark col">Login as Spectator</button>
+            <p>You can use a spectator mode user for a quick glimpse of the website! Spectators can't Create, Update and Delete</p>
+            <div>
+                <button class="btn btn-primary">Log in as Spectator</button>
             </div>
-            <p class="text-warning"><strong>&emsp;Spectators can't Create, Update and Delete</strong>
-            </p>
         </section>
-    </div>
     </div>
 </div>
 
