--- a/DrawingRegisterWeb/Views/DrawingRegisters/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Delete.cshtml
@@ -14,7 +14,9 @@
 	</strong></p>
 
 	<hr />
-	
+
+	<span class="text-danger">@Html.ValidationMessage("NoLongerAdmin")</span>
+
 	<form asp-action="Delete">
 		<input type="hidden" asp-for="Id" />
 		<div class="btn-group">
