--- a/DrawingRegisterWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DrawingRegisterWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -38,12 +38,6 @@
 					<p>
 						<a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
 					</p>
-					<p>
-						<a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-					</p>
-					<p>
-						<a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-					</p>
 				</div>
 			</form>
 		</section>
@@ -52,13 +46,10 @@
 		<section class="text-center">
 			<h2>There is no Forced Registration!</h2>
 			<hr />
-			<h6 class="text-secondary"><strong>You can use a spectator mode user for a quick glimpse of the website!</strong></h6>
-			<div class="container text-center mt-4 mb-4">
-				<img style="height:4em; width:4em" src="~/Assets/incognito.png" />
-				<button class="btn-lg btn-dark col">Login as Spectator</button>
+			<p>You can use a spectator mode user for a quick glimpse of the website! Spectators can't Create, Update and Delete</p>
+			<div>
+				<button class="btn btn-primary">Log in as Spectator</button>
 			</div>
-			<p class="text-warning"><strong>&emsp;Spectators can't Create, Update and Delete</strong>
-			</p>
 		</section>
 	</div>
 </div>
