--- a/DrawingRegisterWeb/Views/ProjectStates/Create.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Create.cshtml
@@ -17,6 +17,7 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+                <span class="text-danger">@Html.ValidationMessage("ExistingState")</span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
