--- a/DrawingRegisterWeb/Views/DrawingRegisters/Index.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Index.cshtml
@@ -14,7 +14,7 @@
 <hr />
 
 <p class="lead text-center">&emsp;This is where you can manage Your Drawing Register! 
-	Create invitations to your register, manage team members or join existing register.
+	Create new register, send invitations/requests, manage team members.
 </p>
 
 <hr />
