--- a/DrawingRegisterWeb/Views/Projects/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Index.cshtml
@@ -7,7 +7,7 @@
 <h1 class="mb-3 text-primary">Projects</h1>
 
 <p>
-	<a asp-action="Create" class="btn btn-primary mb-3">
+	<a asp-action="Create" class="btn btn-primary">
 		Create New Project
 	</a>
 </p>
@@ -18,7 +18,7 @@
 		</select>
 
 		<input asp-for="Search" type="text" class="form-control me-sm-2" placeholder="Search">
-		<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+		<button class="btn btn-secondary" type="submit">Search</button>
 </form>
 
 <table class="table table-striped mt-3" id="sortTable" style="vertical-align: middle">
