--- a/DrawingRegisterWeb/Views/Layouts/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Layouts/Index.cshtml
@@ -4,21 +4,15 @@
 	ViewData["Title"] = "Layouts";
 }
 
-<h1 class="text-primary">Layouts list</h1>
+<h1 class="text-primary mb-3">Layouts</h1>
 
-<div class="alert alert-dismissible alert-info mt-3">
-  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-  The best practice is to create or upload new Layout directly from the <a  asp-controller="Projects" asp-action="Index">Project</a>. 
-  This way ensures that the project and the layout are always connected.
-</div>
-
-<form asp-controller="Layouts" asp-action="Index" method="get" class="d-flex mt-3">
+<form asp-controller="Layouts" asp-action="Index" method="get" class="d-flex">
 		<select asp-for="Projects" asp-items="Model.ProjectSelectList" class="form-select me-sm-2">
 			<option value="">All</option>
 		</select>
 
 		<input asp-for="Search" type="text" class="form-control me-sm-2" placeholder="Search">
-		<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+		<button class="btn btn-secondary" type="submit">Search</button>
 </form>
 
 <table class="table table-striped mt-3" id="sortTable" style="vertical-align: middle">
@@ -62,7 +56,7 @@
 					@Html.DisplayFor(modelItem => item.FileType)
 				</td>
 				<td>
-					@item.Project.ProjectNubmer @item.Project.Name
+					@item.Project!.ProjectNubmer @item.Project.Name
 				</td>
 				<td>
 					@item.CreateDate.ToString("yyyy/MM/dd")
