--- a/DrawingRegisterWeb/Views/ProjectStates/Create.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Create.cshtml
@@ -8,10 +8,10 @@
 <hr />
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <form asp-action="Create">
             <input asp-for="DrawingRegisterId" hidden/>
-
+            <span class="text-danger">@Html.ValidationMessage("WhiteSpaces")</span>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
