--- a/DrawingRegisterWeb/Views/ProjectStates/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Delete.cshtml
@@ -9,6 +9,7 @@
 <h3>Are you sure you want to delete this Project State?</h3>
 <div>
 	<hr />
+	<span class="text-danger">@Html.TempData["DefaultState"]</span>
 	<dl class="row">
 		<dt class = "col-sm-2">
 			@Html.DisplayNameFor(model => model.Name)
