--- a/DrawingRegisterWeb/Views/ProjectStates/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Edit.cshtml
@@ -9,9 +9,10 @@
 <hr />
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6 mt-3">
         <form asp-action="Edit">
-
+            <span class="text-danger">@Html.ValidationMessage("WhiteSpaces")</span>
+            <span class="text-danger">@Html.ValidationMessage("DefaultState")</span>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input asp-for="DrawingRegisterId" hidden/>
@@ -19,6 +20,7 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+                <span class="text-danger">@Html.ValidationMessage("ExistingState")</span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
