--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -12,7 +12,7 @@
 	</a>
 </p>
 
-<form asp-controller="ProjectStates" asp-action="Index" method="get" class="d-flex">
+<form asp-controller="ProjectStates" asp-action="Index" method="get" class="d-flex mt-3">
 	<select asp-for="States" class="text-secondary form-select me-sm-2">
 		<option value="">All</option>
 		<option value="Standard">Standard States</option>
@@ -20,10 +20,10 @@
 	</select>
 
 	<input asp-for="Search" type="text" class="form-control me-sm-2" placeholder="Search">
-	<button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+	<button class="btn btn-secondary" type="submit">Search</button>
 </form>
 
-<div class="table-responsive">
+<div class="table-responsive mt-3">
 	<table class="table table-striped" id="sortTable" style="vertical-align: middle">
 		<thead>
 			<tr class="user-select-none">
@@ -52,7 +52,7 @@
 					<td>
 						@if (item.Name == ConstData.State_Defined ||
 							 item.Name == ConstData.State_Running ||
-						     item.Name == ConstData.State_Canceled ||
+							 item.Name == ConstData.State_Canceled ||
 							 item.Name == ConstData.State_Completed)
 						{
 							<button 
@@ -79,14 +79,17 @@
 	</table>
 </div>
 
-<div class="alert alert-dismissible alert-warning mt-5">
-  <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-  <h4 class="alert-heading">Warning!</h4>
-  <p class="mb-0">
-	  &emsp;Custom project states have no built-in functions such as limiting accessibility to team members. 
-	  Custom project state will have the same functionality as a running project state. If a custom 
-	  state has projects and was deleted, all projects will be automatically assigned to running state. 
-	  In all project statuses, the administrator will always have complete access to create, read, 
-	  update and delete functions.
-  </p>
+<div class="alert alert-dismissible alert-warning mt-5" id="alertState" style="display:none">
+	<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+	<h4 class="alert-heading">Warning!</h4>
+	<p class="mb-0">
+		&emsp;Custom project states have no built-in functions such as limiting accessibility to team members. 
+		Custom project state will have the same functionality as a running project state. If a custom 
+		state has projects and was deleted, all projects will be automatically assigned to running state. 
+		In all project statuses, the administrator will always have complete access to create, read, 
+		update and delete functions.
+	</p>
+	<div class="text-end mt-3">
+		<button onclick="turnOffStateAlert()" class="btn btn-sm btn-outline-danger">Don't show this message again...</button>
+	</div>
 </div>
