--- a/DrawingRegisterWeb/Views/Projects/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Edit.cshtml
@@ -52,7 +52,7 @@
 	</div>
 
 	<div class="col-md-5">
-		<div class="alert alert-dismissible alert-warning">
+		<div class="alert alert-dismissible alert-warning mt-3">
 			<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
 			<h4 class="alert-heading">How do I save a SOLIDWORKS file as HTML?</h4>
 			<p class="mb-0">&emsp;In eDrawings Professional, click File > Save As. In the dialog box, in Save as type, select eDrawings Web 
