--- a/DrawingRegisterWeb/Views/DrawingRegisters/Index.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Index.cshtml
@@ -7,7 +7,7 @@
 	ViewData["Title"] = "Index";
 }
 
-<div id="backgroundImgDR" class="mt-5 jumbotron mb-0">
+<div id="backgroundImgDR">
 	<h1 class="display-1 text-light text-center p-3"><b>Your Drawing Register!</b></h1>
 </div>
 
