--- a/DrawingRegisterWeb/Views/Projects/Details.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Details.cshtml
@@ -72,6 +72,9 @@
   <li class="nav-item" role="presentation">
 	<a class="nav-link" data-bs-toggle="tab" href="#layouts" data-target="#layouts" aria-selected="false" role="tab" tabindex="-1">Layouts</a>
   </li>
+  <li class="nav-item" role="presentation">
+	<a class="nav-link" data-bs-toggle="tab" href="#Model3D" data-target="#Model3D" aria-selected="false" role="tab" tabindex="-1">3D Model</a>
+  </li>
 </ul>
 
 <div id="myTabContent" class="tab-content">
