--- a/DrawingRegisterWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DrawingRegisterWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<div class="row">
+<div class="row justify-content-between">
 	<div class="col-md-5 mt-5">
 		<section>
 			<form id="account" method="post">
@@ -42,11 +42,11 @@
 			</form>
 		</section>
 	</div>
-	<div class="col-md-7 mt-5">
+	<div class="col-md-5 mt-5">
 		<section class="text-center">
-			<h2>There is no Forced Registration!</h2>
+			<h2>No Forced Registration</h2>
 			<hr />
-			<p>You can use a spectator mode user for a quick glimpse of the website! Spectators can't Create, Update and Delete</p>
+			<p>Spectators can't Create, Update and Delete</p>
 			<div>
 				<button class="btn btn-primary">Log in as Spectator</button>
 			</div>
