--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -2,160 +2,144 @@
 	ViewData["Title"] = "Home Page";
 }
 
-<div id="backgroundImg" class="mt-5 jumbotron mb-0">
-	<h1 class="display-1 text-primary text-center p-3">Keeping Drawings Up To Date!</h1>
-</div>
+<h1 class="lead text-center">Practice project for ASP.NET Core (Model-View-Controller) with C#.</h1>
 
-<hr>
+<h2 class="text-center mb-5 mt-5">What is Drawing Register?</h2>
 
-<p class="lead text-secondary text-center">&emsp; A drawing register is a controlled list of drawings that also provides a standardised way of 
-	tracking the addition of revisions and changes to an existing document.
-</p>
-
-<hr>
-
-<div class="jumbotron mt-5">
-	<h2 class="display-5 text-center mb-5 text-secondary">Manage your Projects with embedded State features</h2>
-
-	<p class="lead text-secondary">&emsp; You can control how accessible the project is for team members. Each project state will 
-		have different functions to create, read, update and delete drawings, documentation and layouts.
-	</p>
-
-	<div class="row">
-		<div class="container text-center" style="width:20em">
-			<table class="table table-hover mt-3 user-select-none text-center">
-				<thead>
-					<tr>
-						<th>ProjectState</th>
-					</tr>
-				</thead>
-				<tbody class="table-primary" style="border: 2px solid white;">
-					<tr data-bs-container="body" 
-					data-bs-toggle="popover" 
-					data-bs-placement="top" 
-					data-bs-content="The project has been created but the plan has not yet been initiated and team members have no access to the project." 
-					data-bs-original-title="Defined">
-						<td style="border: 2px solid white;"><span class="text-info">Defined</span></td>
-					</tr>
-					<tr data-bs-container="body" 
-					data-bs-toggle="popover" 
-					data-bs-placement="right" 
-					data-bs-content="The project has been started and is accessible by team members. Team members can create, read, update and delete drawings, documentation and layouts." 
-					data-bs-original-title="Running">
-						<td style="border: 2px solid white;"><span class="text-primary">Running</span></td>
-					</tr>
-					<tr data-bs-container="body" 
-					data-bs-toggle="popover" 
-					data-bs-placement="left" 
-					data-bs-content="The project set to Completed. Team members can only read drawings, documentation and layouts." 
-					data-bs-original-title="Completed">
-						<td style="border: 2px solid white;"><span class="text-success">Completed</span></td>
-					</tr>
-					<tr data-bs-container="body" 
-					data-bs-toggle="popover" 
-					data-bs-placement="bottom" 
-					data-bs-content="The project has been canceled, but project data is still available to team members. Team members can only read drawings, documentation and layouts." 
-					data-bs-original-title="Canceled">
-						<td style="border: 2px solid white;"><span class="text-danger">Canceled</span></td>
-					</tr>
-				</tbody>
-			</table>
+<div class="row">
+	<div class="col-lg-4 p-3">
+		<div class="cardHome card-1 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard1" aria-controls="offcanvasCard1">
+			<h3>A Drawing Register</h3>
+			<p>Web based software to store, manage, change electronic drawing and documentation files</p>
 		</div>
 	</div>
-
-
-	<p class="lead text-secondary mt-3 text-center">In all project statuses, the administrator will always have complete access to create, read, 
-		update and delete functions.
-	</p>
-
-	<hr class="my-4">
+	<div class="col-lg-4 p-3">
+		<div class="cardHome card-2 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard2" aria-controls="offcanvasCard2">
+			<h3>Organise</h3>
+			<p>Group your drawings by Projects and Project States</p>
+		</div>
+	</div>
+	<div class="col-lg-4 p-3">
+		<div class="cardHome card-3 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard3" aria-controls="offcanvasCard3">
+			<h3>Track Drawing Changes</h3>
+			<p>Built in revision control system allows you to keep track of what changed</p>
+		 </div>
+	</div>
 </div>
 
-<div class="jumbotron mt-5">
-	<h4 class="display-5 text-center mb-5 text-secondary">SQL Logic</h4>
-	<img class="rounded mx-auto d-block w-100" src="~/Assets/SqlDiagram.gif" style="max-width:900px;" />
-
-
-</div>
-
-<hr class="my-4">
-
-<div class="jumbotron mt-5">
-	<h3 class="display-5 text-center mb-5 text-primary">Register an account and create your own Drawing Register</h3>
-
-	<p class="lead text-secondary">&emsp; You can control how accessible the project is for team members. Each project state will 
-		have different functions to create, read, update and delete drawings, documentation and layouts.
-	</p>
-
-	<div class="mt-5 d-flex flex-wrap justify-content-around text-secondary">
-		<div class="card border-primary mb-3" style="max-width: 20rem;">
-			<div class="card-header text-primary">
-				<i class="bi bi-sunglasses h1"></i>
-			</div>
-			<div class="card-body">
-				<h4 class="card-title text-primary">Login & Explore</h4>
-				<p class="card-text">
-					Don't want to register? Login as spectator and explore! Seeded data will show you all features in no time.
-				</p>
-				<p class="card-text">
-					<strong class="text-warning">Spectators can't Create, Update and Delete</strong>
-				</p>
-			</div>
+<div id="marginForHomeIntroduction" class="row">
+	<div class="col-lg-4 p-3">
+		<div class="cardHome card-4 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard4" aria-controls="offcanvasCard4">
+			<h3>Security</h3>
+			<p>Each drawing register user will have their own login and Roles</p>
 		</div>
-
-		<div class="card border-primary mb-3" style="max-width: 20rem;">
-			<div class="card-header text-primary">
-				<i class="bi bi-book-fill h1"></i>
-			</div>
-			<div class="card-body">
-				<h4 class="card-title text-primary">Register & Create</h4>
-				<p class="card-text">
-					Register account and test application without any limitations! Separate documents into projects, add new 
-					members to your register and more!
-				</p>
-			</div>
-		</div>
-
-		<div class="card border-primary mb-3" style="max-width: 20rem;">
-			<div class="card-header text-primary">
-				<i class="bi bi-bar-chart-line-fill h1"></i>
-			</div>
-			<div class="card-body">
-				<h4 class="card-title text-primary">My Progress</h4>
-				<p class="card-text">
-					Track your progress with built-in application graphics.
-				</p>
-			</div>
+	</div>
+	<div class="col-lg-4 p-3">
+		<div class="cardHome card-5 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard5" aria-controls="offcanvasCard5">
+			<h3>Database</h3>
+			<p>SQL Diagram</p>
 		</div>
 	</div>
 </div>
 
-<hr class="my-4">
+<img id="HomeIntroduction" src="~/Assets/Solutions_automation.svg" loading="lazy"/>
 
-<div class="jumbotron mt-5">
 
-	<h4 class="display-5 text-center mb-5 text-secondary">Upload 3D models straight to your Drawing Register!!!</h4>
 
-	<div class="d-flex flex-wrap justify-content-evenly">
 
-		<p class="lead text-secondary">&emsp;Upload your 3D models with Solidworks eDrawings and preview them everywhere!!! 
-			With this Drawing Register you can load your CAD files to your portable device on sight. It can be used not 
-			only for presentations, but also for your engineers.
-		</p>
+<!-- Off Canvas -->
 
-		<div class="card mt-3 p-1 overflow-hidden" style="width:75%; max-width:800px;">
-			<iframe
-				src="~/Assets/ConveyorSystem.html" 
-				alt="3D-Model" 
-				loading="lazy" 
-				style="width:100%; aspect-ratio: 3/2;">
-			</iframe>
+<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasCard1" aria-labelledby="offcanvasCard1Label" style="height:80vh">
+	<div class="offcanvas-header">
+		<h5 class="offcanvas-title" id="offcanvasCard1Label">OffCanvas</h5>
+		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	</div>
+	<div class="offcanvas-body">
+		<div>
+			Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
 		</div>
-
-		<p class="lead text-secondary mt-3">&emsp;Built in eDrawings features allow you to review components list, explode model, 
-			make section view, move separate components, play animated views,  change the display settings and has a full screen mode.
-		</p>
-
 	</div>
 </div>
 
+<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasCard2" aria-labelledby="offcanvasCard2Label" style="height:80vh">
+	<div class="offcanvas-header">
+		<h5 class="offcanvas-title" id="offcanvasCard2Label">OffCanvas</h5>
+		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	</div>
+	<div class="offcanvas-body">
+		<div>
+			Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+		</div>
+	</div>
+</div>
+
+<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasCard3" aria-labelledby="offcanvasCard3Label" style="height:80vh">
+	<div class="offcanvas-header">
+		<h5 class="offcanvas-title" id="offcanvasCard3Label">OffCanvas</h5>
+		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	</div>
+	<div class="offcanvas-body">
+		<div>
+			Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+		</div>
+	</div>
+</div>
+
+<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasCard4" aria-labelledby="offcanvasCard4Label" style="height:80vh">
+	<div class="offcanvas-header">
+		<h5 class="offcanvas-title" id="offcanvasCard4Label">OffCanvas</h5>
+		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	</div>
+	<div class="offcanvas-body">
+		<div>
+			Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+		</div>
+	</div>
+</div>
+
+<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasCard5" aria-labelledby="offcanvasCard5Label" style="height:80vh">
+	<div class="offcanvas-header">
+		<h5 class="offcanvas-title" id="offcanvasCard5Label">Drawing Register SQL Diagram</h5>
+		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+	</div>
+	<div class="offcanvas-body">
+		<iframe 
+			width="100%" 
+			height="100%" 
+			style="box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); border-radius:15px;" 
+			allowtransparency="true" 
+			allowfullscreen="true" 
+			scrolling="no"
+			frameborder="0" 
+			src="https://drawsql.app/teams/solo-project/diagrams/drawing-register-v2/embed">
+		</iframe>
+	</div>
+</div>
+
+
+@section Scripts{
+	<script>
+		const homeIntroduction = document.getElementById("HomeIntroduction");
+		const marginForImg = document.getElementById("marginForHomeIntroduction");
+
+		window.addEventListener("resize", changeImgSize);
+
+		changeImgSize();
+		showImg();
+
+		function changeImgSize(){
+			if(window.innerWidth > window.innerHeight){
+				homeIntroduction.style.width = "35vh";
+				marginForImg.style.marginBottom = "25vh";
+			}
+			else {
+				homeIntroduction.style.width = "35vw";
+				marginForImg.style.marginBottom = "25vw";
+			}
+		}
+		function showImg(){
+			homeIntroduction.style.display = "block";
+		}
+		
+	</script>
+}
