--- a/DrawingRegisterWeb/Views/Projects/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Edit.cshtml
@@ -11,13 +11,14 @@
 <div class="row justify-content-between">
 	<div class="col-md-6">
 		<form asp-action="Edit">
-			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<span class="text-danger">@Html.ValidationMessage("WhiteSpaces")</span>
 			<input type="hidden" asp-for="Id" />
 			<input type="hidden" asp-for="ModelUrl" />
 			<div class="form-group">
 				<label asp-for="ProjectNubmer" class="control-label"></label>
 				<input asp-for="ProjectNubmer" class="form-control" />
 				<span asp-validation-for="ProjectNubmer" class="text-danger"></span>
+				<span class="text-danger">@Html.ValidationMessage("ExistingProjectNumber")</span>
 			</div>
 			<div class="form-group">
 				<label asp-for="Name" class="control-label"></label>
@@ -43,6 +44,7 @@
 				<label asp-for="ProjectStateId" class="control-label"></label>
 				<select asp-for="ProjectStateId" class="form-control" asp-items="ViewBag.ProjectStateId"></select>
 				<span asp-validation-for="ProjectStateId" class="text-danger"></span>
+				<span class="text-danger">@Html.ValidationMessage("OnlyAdmin")</span>
 			</div>
 			<div class="btn-group mt-3" role="group">
 				<input type="submit" value="Save" class="btn btn-outline-primary" />
@@ -60,7 +62,8 @@
 				<a href="https://help.solidworks.com/2023/english/WhatsNew/c_wn2023_welcome.htm" 
 				class="alert-link">SOLIDWORKS Knowledge Base</a>.</p>
 		</div>
-		<form asp-controller="Projects" asp-action="Upload" method="post" enctype="multipart/form-data" class="mt-3">
+		<span class="text-danger">@Html.TempData["html"]</span>
+		<form asp-controller="Model3D" asp-action="UploadFile" enctype="multipart/form-data" class="mt-3">
 			<input type="hidden" asp-for="Id" />
 			<label class="control-label">Upload Your eDrawings Web HTML File</label>
 			<input id="inputFile" type="file" name="file" class="form-control mt-1"/>
@@ -70,13 +73,13 @@
 			</button >
 		</form>
 
-		<form asp-controller="Projects" asp-action="UploadDelete" method="post" enctype="multipart/form-data" class="mt-3">
+		<form asp-controller="Model3D" asp-action="UploadDelete" method="post" enctype="multipart/form-data" class="mt-3">
 			<input type="hidden" asp-for="Id" />
 			@if (Model.ModelUrl != null)
 			{
 				<div class="btn-group">
 					<a	href="@Model.ModelUrl" target="_blank" class="btn btn-outline-secondary">Open 3D Model</a>
-				<button type="submit" class="btn btn-outline-danger">Delete 3D Model</button >
+					<button type="submit" class="btn btn-outline-danger">Delete 3D Model</button >
 				</div>
 			}
 		</form>
