--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <h1 class="lead text-center">Practice project for ASP.NET Core (Model-View-Controller) with C#.</h1>
 
-<h2 class="text-center mb-5 mt-5">What is Drawing Register?</h2>
+<h2 class="text-center text-primary mb-5 mt-5">What is Drawing Register?</h2>
 
 <div class="row">
 	<div class="col-lg-4 p-3">
@@ -31,7 +31,7 @@
 	<div class="col-lg-4 p-3">
 		<div class="cardHome card-4 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard4" aria-controls="offcanvasCard4">
 			<h3>Security</h3>
-			<p>Each drawing register user will have their own login and Roles</p>
+			<p>Each drawing register user will have their own login and role</p>
 		</div>
 	</div>
 	<div class="col-lg-4 p-3">
@@ -49,7 +49,7 @@
 
 <!-- Off Canvas -->
 
-<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasCard1" aria-labelledby="offcanvasCard1Label" style="height:80vh">
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCard1" aria-labelledby="offcanvasCard1Label">
 	<div class="offcanvas-header">
 		<h5 class="offcanvas-title" id="offcanvasCard1Label">OffCanvas</h5>
 		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -61,7 +61,7 @@
 	</div>
 </div>
 
-<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasCard2" aria-labelledby="offcanvasCard2Label" style="height:80vh">
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCard2" aria-labelledby="offcanvasCard2Label">
 	<div class="offcanvas-header">
 		<h5 class="offcanvas-title" id="offcanvasCard2Label">OffCanvas</h5>
 		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -73,7 +73,7 @@
 	</div>
 </div>
 
-<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasCard3" aria-labelledby="offcanvasCard3Label" style="height:80vh">
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCard3" aria-labelledby="offcanvasCard3Label">
 	<div class="offcanvas-header">
 		<h5 class="offcanvas-title" id="offcanvasCard3Label">OffCanvas</h5>
 		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -85,7 +85,7 @@
 	</div>
 </div>
 
-<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasCard4" aria-labelledby="offcanvasCard4Label" style="height:80vh">
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasCard4" aria-labelledby="offcanvasCard4Label">
 	<div class="offcanvas-header">
 		<h5 class="offcanvas-title" id="offcanvasCard4Label">OffCanvas</h5>
 		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
