--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -79,9 +79,9 @@
 	</table>
 </div>
 
-<div class="alert alert-dismissible alert-warning mt-5" id="alertState" style="display:none">
+<div class="alert alert-dismissible bg-light border mt-5" id="alertState" style="display:none">
 	<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-	<h4 class="alert-heading">Warning!</h4>
+	<h4 class="alert-heading">Custom States</h4>
 	<p class="mb-0">
 		&emsp;Custom project states have no built-in functions such as limiting accessibility to team members. 
 		Custom project state will have the same functionality as a running project state. If a custom 
@@ -90,7 +90,7 @@
 		update and delete functions.
 	</p>
 	<div class="text-end mt-3">
-		<button onclick="turnOffStateAlert()" class="btn btn-sm btn-outline-danger">Don't show this message again...</button>
+		<button onclick="turnOffStateAlert()" class="btn btn-sm btn-outline-warning">Don't show this message again...</button>
 	</div>
 </div>
 
