--- a/DrawingRegisterWeb/Views/Projects/Delete.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DrawingRegisterWeb.Models.Project
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Project Delete";
 }
 
 <h1 class="text-danger">Delete</h1>
