--- a/DrawingRegisterWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DrawingRegisterWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -37,6 +37,10 @@
 				<div class="mt-3">
 					<p>
 						<a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+						
+					</p>
+					<p>
+						<a asp-page="./Register">Create a new account</a>
 					</p>
 				</div>
 			</form>
