--- a/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
@@ -43,7 +43,7 @@
 <form asp-action="Create" class="mt-5">
 	<div class="form-check form-switch">
 		<input onclick="changeText()" name="seedData" value="true" class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked>
-		<label id="checkBoxLabel" class="form-check-label text-primary" for="flexSwitchCheckChecked">Seed Register with example projects, drawings, documentation and layouts</label>
+		<label id="checkBoxLabel" class="form-check-label text-primary" for="flexSwitchCheckChecked">Seed Register with example projects, drawings, documentation and layouts ?</label>
 	</div>
 	<div class="btn-group text-center mt-3">
 		<button type="submit" class="btn btn-outline-primary"><i class="bi bi-plus-circle"></i> Create New Register</button>
