--- a/DrawingRegisterWeb/Views/Projects/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Edit.cshtml
@@ -1,19 +1,18 @@
 ﻿@model DrawingRegisterWeb.Models.Project
 
 @{
-	ViewData["Title"] = "Edit";
+	ViewData["Title"] = "Project Edit";
 }
 
 <h1 class="text-primary">Edit</h1>
-
 <h4>Project</h4>
 <hr />
-<div class="row justify-content-between">
-	<div class="col-md-6">
+
+<div class="row">
+	<div class="col-md-6 mt-3">
 		<form asp-action="Edit">
 			<span class="text-danger">@Html.ValidationMessage("WhiteSpaces")</span>
 			<input type="hidden" asp-for="Id" />
-			<input type="hidden" asp-for="ModelUrl" />
 			<div class="form-group">
 				<label asp-for="ProjectNubmer" class="control-label"></label>
 				<input asp-for="ProjectNubmer" class="form-control" />
@@ -40,69 +39,26 @@
 				<input asp-for="DeadlineDate" class="form-control" />
 				<span asp-validation-for="DeadlineDate" class="text-danger"></span>
 			</div>
-			<div class="form-group">
-				<label asp-for="ProjectStateId" class="control-label"></label>
-				<select asp-for="ProjectStateId" class="form-control" asp-items="ViewBag.ProjectStateId"></select>
-				<span asp-validation-for="ProjectStateId" class="text-danger"></span>
-				<span class="text-danger">@Html.ValidationMessage("OnlyAdmin")</span>
-			</div>
+			@if (User.IsInRole(ConstData.Role_Admin_Name))
+			{
+				<div class="form-group">
+					<label asp-for="ProjectStateId" class="control-label"></label>
+					<select asp-for="ProjectStateId" class="form-control" asp-items="ViewBag.ProjectStateId"></select>
+					<span asp-validation-for="ProjectStateId" class="text-danger"></span>
+					<span class="text-danger">@Html.ValidationMessage("OnlyAdmin")</span>
+				</div>
+			}
 			<div class="btn-group mt-3" role="group">
 				<input type="submit" value="Save" class="btn btn-outline-primary" />
 				<a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-secondary">Back to Details</a>
 			</div>
 		</form>
 	</div>
-
-	<div class="col-md-5">
-		<div class="alert alert-dismissible alert-warning mt-3">
-			<button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-			<h4 class="alert-heading">How do I save a SOLIDWORKS file as HTML?</h4>
-			<p class="mb-0">&emsp;In eDrawings Professional, click File > Save As. In the dialog box, in Save as type, select eDrawings Web 
-				HTML Files (*. html). Search 'Save As Web HTML' in the 
-				<a href="https://help.solidworks.com/2023/english/WhatsNew/c_wn2023_welcome.htm" 
-				class="alert-link">SOLIDWORKS Knowledge Base</a>.</p>
-		</div>
-		<span class="text-danger">@Html.TempData["html"]</span>
-		<form asp-controller="Model3D" asp-action="UploadFile" enctype="multipart/form-data" class="mt-3">
-			<input type="hidden" asp-for="Id" />
-			<label class="control-label">Upload Your eDrawings Web HTML File</label>
-			<input id="inputFile" type="file" name="file" class="form-control mt-1"/>
-
-			<button id="submitFile" type="submit" class="btn btn-outline-primary mt-3">
-				@(Model.ModelUrl != null ? "Update" : "Upload") 3D Model
-			</button >
-		</form>
-
-		<form asp-controller="Model3D" asp-action="UploadDelete" method="post" enctype="multipart/form-data" class="mt-3">
-			<input type="hidden" asp-for="Id" />
-			@if (Model.ModelUrl != null)
-			{
-				<div class="btn-group">
-					<a	href="@Model.ModelUrl" target="_blank" class="btn btn-outline-secondary">Open 3D Model</a>
-					<button type="submit" class="btn btn-outline-danger">Delete 3D Model</button >
-				</div>
-			}
-		</form>
-	</div>
 </div>
 
-@section Scripts {
-
-	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-
-	<script>
-		//Disable and enebable file upload box submit button
-		const submitFile = document.getElementById('submitFile');
-		const inputFile = document.getElementById('inputFile');
-
-		submitFile.disabled = true;
-		inputFile.addEventListener("change", function(){
-			if (inputFile.value == "") {
-				submitFile.disabled = true;
-			}
-			else {
-				submitFile.disabled = false;
-			}
-		});
-	</script>
+@section Scripts 
+{ 
+	@{
+		await Html.RenderPartialAsync("_ValidationScriptsPartial");
+	}
 }
