--- a/DrawingRegisterWeb/Views/Projects/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Projects/Index.cshtml
@@ -6,11 +6,11 @@
 
 <h1 class="mb-3 text-primary">Projects</h1>
 
-<p>
-	<a asp-action="Create" class="btn btn-primary">
-		Create New Project
-	</a>
-</p>
+@if (User.IsInRole(ConstData.Role_Admin_Name))
+{
+	<a asp-action="Create" class="btn btn-primary mb-3">Create New Project</a>
+}
+
 
 <form asp-controller="Projects" asp-action="Index" method="get" class="d-flex">
 		<select asp-for="States" asp-items="Model.ProjectStates" class="text-secondary form-select me-sm-2">
@@ -21,65 +21,67 @@
 		<button class="btn btn-secondary" type="submit">Search</button>
 </form>
 
-<table class="table table-striped mt-3" id="sortTable" style="vertical-align: middle">
-	<thead>
-		<tr class="user-select-none">
-			<th onclick="sortTable(0)">
-				@Html.DisplayNameFor(model => model.Projects![0].ProjectNubmer), @Html.DisplayNameFor(model => model.Projects![0].Name)
-				<i class="sortIcon bi"></i>
-			</th>
-			<th onclick="sortTable(1)">
-				@Html.DisplayNameFor(model => model.Projects![0].CreateDate)
-				<i class="sortIcon bi"></i>
-			</th>
-			<th onclick="sortTable(2)">
-				@Html.DisplayNameFor(model => model.Projects![0].DeadlineDate)
-				<i class="sortIcon bi"></i>
-			</th>
-			<th onclick="sortTable(3)">
-				@Html.DisplayNameFor(model => model.Projects![0].ProjectState)
-				<i class="sortIcon bi"></i>
-			</th>
-			<th></th>
-		</tr>
-	</thead>
-	<tbody>
-	@foreach (var item in Model.Projects!) 
-	{
-		<tr>
-			<td>
-				@item.ProjectNubmer @item.Name
-			</td>
-			<td>
-				@item.CreateDate.ToString("yyyy/MM/dd")
-			</td>
-			<td>
-				@item.DeadlineDate.ToString("yyyy/MM/dd")
-			</td>
-			<td>
-					@switch (item.ProjectState!.Name)
-					{
-						case "Defined":
-							<span class="text-info">@item.ProjectState!.Name</span>
-							break;
-						case "Canceled":
-							<span class="text-danger">@item.ProjectState!.Name</span>
-							break;
-						case "Completed":
-							<span class="text-success">@item.ProjectState!.Name</span>
-							break;
-						default:
-							<span class="text-primary">@item.ProjectState!.Name</span>
-							break;
-					}
-					
-			</td>
-			<td>
-					<a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary"> 
-						<i class="bi bi-folder2-open"></i> Open
-					</a>
-			</td>
-		</tr>
-	}
-	</tbody>
-</table>
+<div class="table-responsive mt-3">
+	<table class="table table-striped" id="sortTable" style="vertical-align: middle">
+		<thead>
+			<tr class="user-select-none">
+				<th onclick="sortTable(0)">
+						@Html.DisplayNameFor(model => model.Projects![0].ProjectNubmer), @Html.DisplayNameFor(model => model.Projects![0].Name)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(1)">
+						@Html.DisplayNameFor(model => model.Projects![0].CreateDate)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(2)">
+						@Html.DisplayNameFor(model => model.Projects![0].DeadlineDate)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th onclick="sortTable(3)">
+						@Html.DisplayNameFor(model => model.Projects![0].ProjectState)
+					<i class="sortIcon bi"></i>
+				</th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+				@foreach (var item in Model.Projects!)
+				{
+				<tr>
+					<td>
+							@item.ProjectNubmer @item.Name
+					</td>
+					<td>
+							@item.CreateDate.ToString("yyyy/MM/dd")
+					</td>
+					<td>
+							@item.DeadlineDate.ToString("yyyy/MM/dd")
+					</td>
+					<td>
+							@switch (item.ProjectState!.Name)
+							{
+								case ConstData.State_Defined:
+											<span class="text-info">@item.ProjectState!.Name</span>
+									break;
+								case ConstData.State_Canceled:
+											<span class="text-danger">@item.ProjectState!.Name</span>
+									break;
+								case ConstData.State_Completed:
+											<span class="text-success">@item.ProjectState!.Name</span>
+									break;
+								default:
+											<span class="text-primary">@item.ProjectState!.Name</span>
+									break;
+							}
+
+					</td>
+					<td>
+							<a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary"> 
+								<i class="bi bi-folder2-open"></i> Open
+							</a>
+					</td>
+				</tr>
+				}
+		</tbody>
+	</table>
+</div>
