--- a/DrawingRegisterWeb/wwwroot/css/site.css
+++ b/DrawingRegisterWeb/wwwroot/css/site.css
@@ -91,6 +91,13 @@ body {
     background-size: 80px;
 }
 
+.card-6 {
+    background-image: url(../Assets/CardHome-6.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 80px;
+}
+
 @media(max-width: 990px) {
     .cardHome {
         margin: 20px;
