Update DrawingController Fixed Projects Tracking bug

--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -97,9 +97,7 @@
 	</div>
 	<div class="offcanvas-body">
 		<div>
-			<figcaption class="blockquote-footer">
-				Everything must work! Do it or Fake it until you Make it!
-			</figcaption>
+			text
 		</div>
 	</div>
 </div>
