--- a/DrawingRegisterWeb/Views/Drawings/Create.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Create.cshtml
@@ -11,6 +11,8 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <span class="text-danger">@Html.ValidationMessage("WhiteSpaces")</span>
+            <span class="text-danger">@Html.ValidationMessage("NoCreate")</span>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DrawingNumber" class="control-label"></label>
@@ -27,10 +29,7 @@
                 <textarea asp-for="Description" rows="3" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group" hidden>
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class ="form-control" value="ProjectId" asp-items="ViewBag.ProjectId"></select>
-            </div>
+                <input asp-for="ProjectId" value="@ViewBag.ProjectRouteId" hidden>
             <div class="btn-group mt-3" role="group">
                 <input type="submit" value="Create" class="btn btn-outline-primary"/>
                 <a class="btn btn-outline-secondary" asp-controller="Projects" asp-action="Details" asp-route-id="@ViewBag.ProjectRouteId">Back to Project</a>
