--- a/DrawingRegisterWeb/Views/Drawings/Edit.cshtml
+++ b/DrawingRegisterWeb/Views/Drawings/Edit.cshtml
@@ -11,6 +11,8 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
+            <span class="text-danger">@Html.ValidationMessage("WhiteSpaces")</span>
+            <span class="text-danger">@Html.ValidationMessage("NoEdit")</span>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
@@ -33,11 +35,9 @@
                 <input asp-for="CreateDate" class="form-control" />
                 <span asp-validation-for="CreateDate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ProjectId" class="control-label"></label>
-                <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
-                <span asp-validation-for="ProjectId" class="text-danger"></span>
-            </div>
+
+            <input asp-for="ProjectId" value="@ViewBag.ProjectId" hidden>
+
             <div class="btn-group mt-3" role="group">
                 <input type="submit" value="Save" class="btn btn-outline-primary" />
                 <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-secondary">Back to Details</a>
